--- a/index.html
+++ b/index.html
@@ -4,11 +4,32 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <title></title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.12/handlebars.min.js" charset="utf-8"></script>
+    <title>BoolFlix</title>
   </head>
   <body>
 
+    <input type="text" id="nomeFilm">
+    <button type="button" id="myButton">CERCA IL FILM</button>
 
+
+      <div class="list">
+        <ul class="filmList">
+
+        </ul>
+      </div>
+
+
+
+
+    <script id="entry-template" type="text/x-handlebars-template">
+      <br>
+      <li>Titolo: {{titoloFilm}}</li>
+      <li>Titolo Originale: {{titoloOriginale}}</li>
+      <li>Lingua Originale: {{lingua}}</li>
+      <li>Voto: {{voto}}</li>
+      <br>
+    </script>
   <script src="script.js" charset="utf-8"></script>
   </body>
 </html>
