risolto problema stelline

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <li>Titolo: {{titoloFilm}}</li>
       <li>Titolo Originale: {{titoloOriginale}}</li>
       <li>Lingua Originale: {{lingua}}</li>
-      <li>Voto: <span class="stelline">{{voto}}</span></li>
+      <li>Voto: <span class="stelline">{{{voto}}}</span></li>
       <br>
     </script>
   <script src="script.js" charset="utf-8"></script>
