gestite due bandiere ma come al solito manca l'else

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <br>
       <li>Titolo: {{titoloFilm}}</li>
       <li>Titolo Originale: {{titoloOriginale}}</li>
-      <li>Lingua Originale: {{lingua}}</li>
+      <li>Lingua Originale: {{{lingua}}}</li>
       <li>Voto: <span class="stelline">{{{voto}}}</span></li>
       <br>
     </script>
