ottimizzati risultati film in una funzione

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
     <script id="entry-template" type="text/x-handlebars-template">
       <br>
+      <li>{{{immagine_film}}}</li>
       <li>Titolo: {{titoloFilm}}</li>
       <li>Titolo Originale: {{titoloOriginale}}</li>
       <li>Lingua Originale: {{{lingua}}}</li>
