--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <li>{{{immagine_film}}}</li>
       <li>Titolo: {{titoloFilm}}</li>
       <li>Titolo Originale: {{titoloOriginale}}</li>
+      <li>Descrizione:  {{ descrizione }}</li>
       <li>Lingua Originale: {{{lingua}}}</li>
       <li>Voto: <span class="stelline">{{{voto}}}</span></li>
       <br>
