--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
         <button type="button" id="myButton">CERCA IL FILM</button>
       </div>
     </div>
+    <div class="wrapper">
+      <div class="container-all-films">
 
-    <div class="container-all-films">
-
+      </div>
     </div>
+
 
 
 
