--- a/index.html
+++ b/index.html
@@ -28,14 +28,20 @@
 
     <script id="entry-template" type="text/x-handlebars-template">
       <div class="film-tv">
-        <ul class="filmList">
-          <li>{{{immagine_film}}}</li>
-          <li>Titolo: {{titoloFilm}}</li>
-          <li>Titolo Originale: {{titoloOriginale}}</li>
-          <li>Descrizione:  {{ descrizione }}</li>
-          <li>Lingua Originale: {{{lingua}}}</li>
-          <li>Voto: <span class="stelline">{{{voto}}}</span></li>
-        </ul>
+        <div class="imgFilm">
+          <ul class="filmList">
+            <li>{{{immagine_film}}}</li>
+          </ul>
+          <div class="infoFilm">
+            <ul>
+              <li>Titolo: {{titoloFilm}}</li>
+              <li>Titolo Originale: {{titoloOriginale}}</li>
+              <li>Descrizione:  {{ descrizione }}</li>
+              <li>Lingua Originale: {{{lingua}}}</li>
+              <li>Voto: <span class="stelline">{{{voto}}}</span></li>
+            </ul>
+          </div>
+        </div>
       </div>
 
 
