problemi con il css

--- a/index.html
+++ b/index.html
@@ -29,19 +29,20 @@
     <script id="entry-template" type="text/x-handlebars-template">
       <div class="film-tv">
         <div class="imgFilm">
-          <ul class="filmList">
-            <li>{{{immagine_film}}}</li>
-          </ul>
-          </div>
+          
+          {{{immagine_film}}}
+
           <div class="infoFilm">
-            <ul>
-              <li>Titolo: {{titoloFilm}}</li>
-              <li>Titolo Originale: {{titoloOriginale}}</li>
-              <li>Descrizione:  {{ descrizione }}</li>
-              <li>Lingua Originale: {{{lingua}}}</li>
-              <li>Voto: <span class="stelline">{{{voto}}}</span></li>
-            </ul>
+              <ul>
+                <li>Titolo: {{titoloFilm}}</li>
+                <li>Titolo Originale: {{titoloOriginale}}</li>
+                <li>Descrizione:  {{ descrizione }}</li>
+                <li>Lingua Originale: {{{lingua}}}</li>
+                <li>Voto: <span class="stelline">{{{voto}}}</span></li>
+              </ul>
           </div>
+        </div>
+
 
       </div>
 
